# pysqlite-test

./: .gitignore  README.md  pyproject.toml
tutorials/: t1.ipynb
