[tool.poetry]
name = "pysqlite-test"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
ipykernel = "^6.29.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
